--- a/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
+++ b/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
@@ -2,50 +2,50 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/jintaemin/workspace/C++/main'
 relocations:
-  - { offsetInCU: 0x2F42, offset: 0x2F42, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x120, symBinAddr: 0x1000033B0, symSize: 0x1F0 }
-  - { offsetInCU: 0x4892, offset: 0x4892, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB7v160006INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0xE0, symBinAddr: 0x100003370, symSize: 0x40 }
-  - { offsetInCU: 0x48D8, offset: 0x48D8, size: 0x8, addend: 0x0, symName: __ZNSt3__116__pad_and_outputB7v160006IcNS_11char_traitsIcEEEENS_19ostreambuf_iteratorIT_T0_EES6_PKS4_S8_S8_RNS_8ios_baseES4_, symObjAddr: 0x360, symBinAddr: 0x1000035F0, symSize: 0x220 }
-  - { offsetInCU: 0x49A8, offset: 0x49A8, size: 0x8, addend: 0x0, symName: __ZNSt3__119__debug_db_insert_cB7v160006INS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEEEEvPT_, symObjAddr: 0x800, symBinAddr: 0x100003A90, symSize: 0x10 }
-  - { offsetInCU: 0x49D9, offset: 0x49D9, size: 0x8, addend: 0x0, symName: __ZNSt3__112__to_addressB7v160006IKcEEPT_S3_, symObjAddr: 0x8A0, symBinAddr: 0x100003B30, symSize: 0x10 }
-  - { offsetInCU: 0x4A41, offset: 0x4A41, size: 0x8, addend: 0x0, symName: __ZNSt3__19use_facetB7v160006INS_5ctypeIcEEEERKT_RKNS_6localeE, symObjAddr: 0xB00, symBinAddr: 0x100003D90, symSize: 0x30 }
-  - { offsetInCU: 0x4F10, offset: 0x4F10, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB7v160006EPKc, symObjAddr: 0xB90, symBinAddr: 0x100003E20, symSize: 0x1B }
-  - { offsetInCU: 0x7475, offset: 0x7475, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003290, symSize: 0x30 }
-  - { offsetInCU: 0x754E, offset: 0x754E, size: 0x8, addend: 0x0, symName: __ZN7DerivedC1Ev, symObjAddr: 0x30, symBinAddr: 0x1000032C0, symSize: 0x20 }
-  - { offsetInCU: 0x7578, offset: 0x7578, size: 0x8, addend: 0x0, symName: __ZN7Derived3funEv, symObjAddr: 0x50, symBinAddr: 0x1000032E0, symSize: 0x30 }
-  - { offsetInCU: 0x759C, offset: 0x759C, size: 0x8, addend: 0x0, symName: __ZN7DerivedC2Ev, symObjAddr: 0x80, symBinAddr: 0x100003310, symSize: 0x40 }
-  - { offsetInCU: 0x75C6, offset: 0x75C6, size: 0x8, addend: 0x0, symName: __ZN4BaseC2Ev, symObjAddr: 0xC0, symBinAddr: 0x100003350, symSize: 0x20 }
-  - { offsetInCU: 0x75F0, offset: 0x75F0, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthEPKc, symObjAddr: 0x310, symBinAddr: 0x1000035A0, symSize: 0x30 }
-  - { offsetInCU: 0x7630, offset: 0x7630, size: 0x8, addend: 0x0, symName: __ZNKSt3__113basic_ostreamIcNS_11char_traitsIcEEE6sentrycvbB7v160006Ev, symObjAddr: 0x340, symBinAddr: 0x1000035D0, symSize: 0x20 }
-  - { offsetInCU: 0x7654, offset: 0x7654, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC1B7v160006ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x580, symBinAddr: 0x100003810, symSize: 0x30 }
-  - { offsetInCU: 0x768A, offset: 0x768A, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5flagsB7v160006Ev, symObjAddr: 0x5B0, symBinAddr: 0x100003840, symSize: 0x20 }
-  - { offsetInCU: 0x76B0, offset: 0x76B0, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE4fillB7v160006Ev, symObjAddr: 0x5D0, symBinAddr: 0x100003860, symSize: 0x70 }
-  - { offsetInCU: 0x76D6, offset: 0x76D6, size: 0x8, addend: 0x0, symName: __ZNKSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEE6failedB7v160006Ev, symObjAddr: 0x640, symBinAddr: 0x1000038D0, symSize: 0x20 }
-  - { offsetInCU: 0x76FA, offset: 0x76FA, size: 0x8, addend: 0x0, symName: __ZNSt3__19basic_iosIcNS_11char_traitsIcEEE8setstateB7v160006Ej, symObjAddr: 0x660, symBinAddr: 0x1000038F0, symSize: 0x30 }
-  - { offsetInCU: 0x772D, offset: 0x772D, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5widthB7v160006Ev, symObjAddr: 0x6A0, symBinAddr: 0x100003930, symSize: 0x20 }
-  - { offsetInCU: 0x7753, offset: 0x7753, size: 0x8, addend: 0x0, symName: __ZNSt3__115basic_streambufIcNS_11char_traitsIcEEE5sputnB7v160006EPKcl, symObjAddr: 0x6C0, symBinAddr: 0x100003950, symSize: 0x30 }
-  - { offsetInCU: 0x7793, offset: 0x7793, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B7v160006Emc, symObjAddr: 0x6F0, symBinAddr: 0x100003980, symSize: 0x30 }
-  - { offsetInCU: 0x77D9, offset: 0x77D9, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE4dataB7v160006Ev, symObjAddr: 0x720, symBinAddr: 0x1000039B0, symSize: 0x30 }
-  - { offsetInCU: 0x77FD, offset: 0x77FD, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base5widthB7v160006El, symObjAddr: 0x750, symBinAddr: 0x1000039E0, symSize: 0x30 }
-  - { offsetInCU: 0x7841, offset: 0x7841, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B7v160006Emc, symObjAddr: 0x780, symBinAddr: 0x100003A10, symSize: 0x50 }
-  - { offsetInCU: 0x788C, offset: 0x788C, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x7D0, symBinAddr: 0x100003A60, symSize: 0x30 }
-  - { offsetInCU: 0x78E2, offset: 0x78E2, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x810, symBinAddr: 0x100003AA0, symSize: 0x30 }
-  - { offsetInCU: 0x7938, offset: 0x7938, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x840, symBinAddr: 0x100003AD0, symSize: 0x10 }
-  - { offsetInCU: 0x796A, offset: 0x796A, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x850, symBinAddr: 0x100003AE0, symSize: 0x20 }
-  - { offsetInCU: 0x799C, offset: 0x799C, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B7v160006Ev, symObjAddr: 0x870, symBinAddr: 0x100003B00, symSize: 0x20 }
-  - { offsetInCU: 0x79C4, offset: 0x79C4, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B7v160006Ev, symObjAddr: 0x890, symBinAddr: 0x100003B20, symSize: 0x10 }
-  - { offsetInCU: 0x79EC, offset: 0x79EC, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE13__get_pointerB7v160006Ev, symObjAddr: 0x8B0, symBinAddr: 0x100003B40, symSize: 0x50 }
-  - { offsetInCU: 0x7A10, offset: 0x7A10, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE9__is_longB7v160006Ev, symObjAddr: 0x900, symBinAddr: 0x100003B90, symSize: 0x30 }
-  - { offsetInCU: 0x7A34, offset: 0x7A34, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE18__get_long_pointerB7v160006Ev, symObjAddr: 0x930, symBinAddr: 0x100003BC0, symSize: 0x20 }
-  - { offsetInCU: 0x7A58, offset: 0x7A58, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE19__get_short_pointerB7v160006Ev, symObjAddr: 0x950, symBinAddr: 0x100003BE0, symSize: 0x30 }
-  - { offsetInCU: 0x7A7C, offset: 0x7A7C, size: 0x8, addend: 0x0, symName: __ZNKSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_E5firstB7v160006Ev, symObjAddr: 0x980, symBinAddr: 0x100003C10, symSize: 0x20 }
-  - { offsetInCU: 0x7AA0, offset: 0x7AA0, size: 0x8, addend: 0x0, symName: __ZNKSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EE5__getB7v160006Ev, symObjAddr: 0x9A0, symBinAddr: 0x100003C30, symSize: 0x10 }
-  - { offsetInCU: 0x7AC4, offset: 0x7AC4, size: 0x8, addend: 0x0, symName: __ZNSt3__114pointer_traitsIPKcE10pointer_toB7v160006ERS1_, symObjAddr: 0x9B0, symBinAddr: 0x100003C40, symSize: 0x10 }
-  - { offsetInCU: 0x7AE6, offset: 0x7AE6, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC2B7v160006ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x9C0, symBinAddr: 0x100003C50, symSize: 0x50 }
-  - { offsetInCU: 0x7B1C, offset: 0x7B1C, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5rdbufB7v160006Ev, symObjAddr: 0xA10, symBinAddr: 0x100003CA0, symSize: 0x20 }
-  - { offsetInCU: 0x7B42, offset: 0x7B42, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5rdbufB7v160006Ev, symObjAddr: 0xA30, symBinAddr: 0x100003CC0, symSize: 0x20 }
-  - { offsetInCU: 0x7B66, offset: 0x7B66, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE11eq_int_typeEii, symObjAddr: 0xA50, symBinAddr: 0x100003CE0, symSize: 0x20 }
-  - { offsetInCU: 0x7B97, offset: 0x7B97, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE3eofEv, symObjAddr: 0xA70, symBinAddr: 0x100003D00, symSize: 0x10 }
-  - { offsetInCU: 0x7BA9, offset: 0x7BA9, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5widenB7v160006Ec, symObjAddr: 0xA80, symBinAddr: 0x100003D10, symSize: 0x80 }
-  - { offsetInCU: 0x7C15, offset: 0x7C15, size: 0x8, addend: 0x0, symName: __ZNKSt3__15ctypeIcE5widenB7v160006Ec, symObjAddr: 0xB30, symBinAddr: 0x100003DC0, symSize: 0x30 }
-  - { offsetInCU: 0x7C48, offset: 0x7C48, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base8setstateB7v160006Ej, symObjAddr: 0xB60, symBinAddr: 0x100003DF0, symSize: 0x30 }
+  - { offsetInCU: 0x2F42, offset: 0x2F42, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x140, symBinAddr: 0x1000033B0, symSize: 0x1F0 }
+  - { offsetInCU: 0x4892, offset: 0x4892, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB7v160006INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0x100, symBinAddr: 0x100003370, symSize: 0x40 }
+  - { offsetInCU: 0x48D8, offset: 0x48D8, size: 0x8, addend: 0x0, symName: __ZNSt3__116__pad_and_outputB7v160006IcNS_11char_traitsIcEEEENS_19ostreambuf_iteratorIT_T0_EES6_PKS4_S8_S8_RNS_8ios_baseES4_, symObjAddr: 0x380, symBinAddr: 0x1000035F0, symSize: 0x220 }
+  - { offsetInCU: 0x49A8, offset: 0x49A8, size: 0x8, addend: 0x0, symName: __ZNSt3__119__debug_db_insert_cB7v160006INS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEEEEvPT_, symObjAddr: 0x820, symBinAddr: 0x100003A90, symSize: 0x10 }
+  - { offsetInCU: 0x49D9, offset: 0x49D9, size: 0x8, addend: 0x0, symName: __ZNSt3__112__to_addressB7v160006IKcEEPT_S3_, symObjAddr: 0x8C0, symBinAddr: 0x100003B30, symSize: 0x10 }
+  - { offsetInCU: 0x4A41, offset: 0x4A41, size: 0x8, addend: 0x0, symName: __ZNSt3__19use_facetB7v160006INS_5ctypeIcEEEERKT_RKNS_6localeE, symObjAddr: 0xB20, symBinAddr: 0x100003D90, symSize: 0x30 }
+  - { offsetInCU: 0x4F10, offset: 0x4F10, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB7v160006EPKc, symObjAddr: 0xBB0, symBinAddr: 0x100003E20, symSize: 0x1B }
+  - { offsetInCU: 0x7475, offset: 0x7475, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003270, symSize: 0x50 }
+  - { offsetInCU: 0x7520, offset: 0x7520, size: 0x8, addend: 0x0, symName: __ZN7DerivedC1Ev, symObjAddr: 0x50, symBinAddr: 0x1000032C0, symSize: 0x20 }
+  - { offsetInCU: 0x754A, offset: 0x754A, size: 0x8, addend: 0x0, symName: __ZN7DerivedC2Ev, symObjAddr: 0x70, symBinAddr: 0x1000032E0, symSize: 0x40 }
+  - { offsetInCU: 0x7574, offset: 0x7574, size: 0x8, addend: 0x0, symName: __ZN4BaseC2Ev, symObjAddr: 0xB0, symBinAddr: 0x100003320, symSize: 0x20 }
+  - { offsetInCU: 0x759E, offset: 0x759E, size: 0x8, addend: 0x0, symName: __ZN7Derived4showEv, symObjAddr: 0xD0, symBinAddr: 0x100003340, symSize: 0x30 }
+  - { offsetInCU: 0x75C2, offset: 0x75C2, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthEPKc, symObjAddr: 0x330, symBinAddr: 0x1000035A0, symSize: 0x30 }
+  - { offsetInCU: 0x7602, offset: 0x7602, size: 0x8, addend: 0x0, symName: __ZNKSt3__113basic_ostreamIcNS_11char_traitsIcEEE6sentrycvbB7v160006Ev, symObjAddr: 0x360, symBinAddr: 0x1000035D0, symSize: 0x20 }
+  - { offsetInCU: 0x7626, offset: 0x7626, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC1B7v160006ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x5A0, symBinAddr: 0x100003810, symSize: 0x30 }
+  - { offsetInCU: 0x765C, offset: 0x765C, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5flagsB7v160006Ev, symObjAddr: 0x5D0, symBinAddr: 0x100003840, symSize: 0x20 }
+  - { offsetInCU: 0x7682, offset: 0x7682, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE4fillB7v160006Ev, symObjAddr: 0x5F0, symBinAddr: 0x100003860, symSize: 0x70 }
+  - { offsetInCU: 0x76A8, offset: 0x76A8, size: 0x8, addend: 0x0, symName: __ZNKSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEE6failedB7v160006Ev, symObjAddr: 0x660, symBinAddr: 0x1000038D0, symSize: 0x20 }
+  - { offsetInCU: 0x76CC, offset: 0x76CC, size: 0x8, addend: 0x0, symName: __ZNSt3__19basic_iosIcNS_11char_traitsIcEEE8setstateB7v160006Ej, symObjAddr: 0x680, symBinAddr: 0x1000038F0, symSize: 0x30 }
+  - { offsetInCU: 0x76FF, offset: 0x76FF, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5widthB7v160006Ev, symObjAddr: 0x6C0, symBinAddr: 0x100003930, symSize: 0x20 }
+  - { offsetInCU: 0x7725, offset: 0x7725, size: 0x8, addend: 0x0, symName: __ZNSt3__115basic_streambufIcNS_11char_traitsIcEEE5sputnB7v160006EPKcl, symObjAddr: 0x6E0, symBinAddr: 0x100003950, symSize: 0x30 }
+  - { offsetInCU: 0x7765, offset: 0x7765, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B7v160006Emc, symObjAddr: 0x710, symBinAddr: 0x100003980, symSize: 0x30 }
+  - { offsetInCU: 0x77AB, offset: 0x77AB, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE4dataB7v160006Ev, symObjAddr: 0x740, symBinAddr: 0x1000039B0, symSize: 0x30 }
+  - { offsetInCU: 0x77CF, offset: 0x77CF, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base5widthB7v160006El, symObjAddr: 0x770, symBinAddr: 0x1000039E0, symSize: 0x30 }
+  - { offsetInCU: 0x7813, offset: 0x7813, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B7v160006Emc, symObjAddr: 0x7A0, symBinAddr: 0x100003A10, symSize: 0x50 }
+  - { offsetInCU: 0x785E, offset: 0x785E, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x7F0, symBinAddr: 0x100003A60, symSize: 0x30 }
+  - { offsetInCU: 0x78B4, offset: 0x78B4, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x830, symBinAddr: 0x100003AA0, symSize: 0x30 }
+  - { offsetInCU: 0x790A, offset: 0x790A, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x860, symBinAddr: 0x100003AD0, symSize: 0x10 }
+  - { offsetInCU: 0x793C, offset: 0x793C, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x870, symBinAddr: 0x100003AE0, symSize: 0x20 }
+  - { offsetInCU: 0x796E, offset: 0x796E, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B7v160006Ev, symObjAddr: 0x890, symBinAddr: 0x100003B00, symSize: 0x20 }
+  - { offsetInCU: 0x7996, offset: 0x7996, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B7v160006Ev, symObjAddr: 0x8B0, symBinAddr: 0x100003B20, symSize: 0x10 }
+  - { offsetInCU: 0x79BE, offset: 0x79BE, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE13__get_pointerB7v160006Ev, symObjAddr: 0x8D0, symBinAddr: 0x100003B40, symSize: 0x50 }
+  - { offsetInCU: 0x79E2, offset: 0x79E2, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE9__is_longB7v160006Ev, symObjAddr: 0x920, symBinAddr: 0x100003B90, symSize: 0x30 }
+  - { offsetInCU: 0x7A06, offset: 0x7A06, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE18__get_long_pointerB7v160006Ev, symObjAddr: 0x950, symBinAddr: 0x100003BC0, symSize: 0x20 }
+  - { offsetInCU: 0x7A2A, offset: 0x7A2A, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE19__get_short_pointerB7v160006Ev, symObjAddr: 0x970, symBinAddr: 0x100003BE0, symSize: 0x30 }
+  - { offsetInCU: 0x7A4E, offset: 0x7A4E, size: 0x8, addend: 0x0, symName: __ZNKSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_E5firstB7v160006Ev, symObjAddr: 0x9A0, symBinAddr: 0x100003C10, symSize: 0x20 }
+  - { offsetInCU: 0x7A72, offset: 0x7A72, size: 0x8, addend: 0x0, symName: __ZNKSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EE5__getB7v160006Ev, symObjAddr: 0x9C0, symBinAddr: 0x100003C30, symSize: 0x10 }
+  - { offsetInCU: 0x7A96, offset: 0x7A96, size: 0x8, addend: 0x0, symName: __ZNSt3__114pointer_traitsIPKcE10pointer_toB7v160006ERS1_, symObjAddr: 0x9D0, symBinAddr: 0x100003C40, symSize: 0x10 }
+  - { offsetInCU: 0x7AB8, offset: 0x7AB8, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC2B7v160006ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x9E0, symBinAddr: 0x100003C50, symSize: 0x50 }
+  - { offsetInCU: 0x7AEE, offset: 0x7AEE, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5rdbufB7v160006Ev, symObjAddr: 0xA30, symBinAddr: 0x100003CA0, symSize: 0x20 }
+  - { offsetInCU: 0x7B14, offset: 0x7B14, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5rdbufB7v160006Ev, symObjAddr: 0xA50, symBinAddr: 0x100003CC0, symSize: 0x20 }
+  - { offsetInCU: 0x7B38, offset: 0x7B38, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE11eq_int_typeEii, symObjAddr: 0xA70, symBinAddr: 0x100003CE0, symSize: 0x20 }
+  - { offsetInCU: 0x7B69, offset: 0x7B69, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE3eofEv, symObjAddr: 0xA90, symBinAddr: 0x100003D00, symSize: 0x10 }
+  - { offsetInCU: 0x7B7B, offset: 0x7B7B, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5widenB7v160006Ec, symObjAddr: 0xAA0, symBinAddr: 0x100003D10, symSize: 0x80 }
+  - { offsetInCU: 0x7BE7, offset: 0x7BE7, size: 0x8, addend: 0x0, symName: __ZNKSt3__15ctypeIcE5widenB7v160006Ec, symObjAddr: 0xB50, symBinAddr: 0x100003DC0, symSize: 0x30 }
+  - { offsetInCU: 0x7C1A, offset: 0x7C1A, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base8setstateB7v160006Ej, symObjAddr: 0xB80, symBinAddr: 0x100003DF0, symSize: 0x30 }
 ...
