--- a/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
+++ b/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
@@ -2,6 +2,9 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/jintaemin/workspace/C++/main'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003F50, symSize: 0x44 }
-  - { offsetInCU: 0x2CBA, offset: 0x2CBA, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003F50, symSize: 0x44 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: __Z2f1v, symObjAddr: 0x0, symBinAddr: 0x100003F30, symSize: 0x30 }
+  - { offsetInCU: 0x2CBA, offset: 0x2CBA, size: 0x8, addend: 0x0, symName: __Z2f1v, symObjAddr: 0x0, symBinAddr: 0x100003F30, symSize: 0x30 }
+  - { offsetInCU: 0x2CD3, offset: 0x2CD3, size: 0x8, addend: 0x0, symName: __Z2f2v, symObjAddr: 0x30, symBinAddr: 0x100003F60, symSize: 0x10 }
+  - { offsetInCU: 0x2CEC, offset: 0x2CEC, size: 0x8, addend: 0x0, symName: __Z2f3v, symObjAddr: 0x40, symBinAddr: 0x100003F70, symSize: 0x10 }
+  - { offsetInCU: 0x2D05, offset: 0x2D05, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x50, symBinAddr: 0x100003F80, symSize: 0xD }
 ...
