--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
-# vscode config
-.vscode
+# Prerequisites
+*.d
 
-# exe
-/main.dSYM
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-# misc
-.DS_Store
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
